# oca-parser-xls

./: CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: bin-assets.yml  rust.yml
src/: lib.rs
src/xls_parser/: data_entry.rs  entries.rs  oca.rs
templates/: template-1.0.0.xlsx  template-1.1.0.xlsx  template-1.1.1.xlsx  template.xlsx
tests/: parse_entries_xls.rs  parse_oca_xls.rs
tests/assets/: oca_template.xls  oca_template.xlsx
