[package]
name = "oca-parser-xls"
version = "1.0.0"
edition = "2021"
license = "EUPL-1.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parser"

[dependencies]
calamine = "0.18.0"
clap = "3.2.18"
oca-rust = "0.2.23"
said = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
xlsxwriter = "0.5.0"
zip = "0.5.13"
