[package]
name = "oca-parser-xls"
description = "Command line tool for parsing XLS file into OCA"
version = "2.0.0-rc.3"
edition = "2021"
license = "EUPL-1.2"
repository = "https://github.com/THCLab/oca-parser-xls"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "parser"

[lib]
name = "oca_parser_xls"
path = "src/lib.rs"

[dependencies]
calamine = "0.18.0"
clap = "3.2.18"
isolang = "2.3.0"
oca-file = { version = "0.4.1-rc.1" }
oca-bundle = { version = "0.4.1-rc.1", features = ["format_overlay"] }
oca-ast = { version = "0.4.1-rc.1" }
said = "0.1.2"
semver = "1.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xlsxwriter = "0.6.0"
